Fix registration error in keycloak